# mux-lang

./: .dockerignore  .envtemplate  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  PR_STATUS_UPDATE.md  README.md  TESTING.md  docker-compose.integration.yml  docker-compose.yml  index.html  opencode.json  package-lock.json  plan.md  run_all_error_cases.sh  run_all_test_scripts.sh  search-index-docs-default-current.json  sitemap.xml  sonar-project.properties  test.mux  test_all.sh  test_copy_semantics  test_reference_field_access  test_reference_field_access.mux
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_lexer/: class_field_defaults.mux  generic_params.mux  logger.mux  nested_generics.mux  test_math.mux  test_nested_field.mux  test_result_is_ok_err.mux  test_std_sync.mux  utils.mux
fuzz/corpus/fuzz_parser/: class_method_params.mux  collections.mux  control_flow.mux  counter.mux  forward_ref.mux  generic_methods.mux  logical_operators.mux  match_switch.mux  test_closures.mux  test_nested_functions.mux  value_semantics_copy_vs_ref.mux
fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs
mux-compiler/: Cargo.toml  README.md  build.rs
mux-compiler/fuzz/: Cargo.toml  README.md
mux-compiler/fuzz/corpus/: README.md
mux-compiler/fuzz/fuzz_targets/: json.rs  lexer.rs  parser.rs
mux-compiler/src/: build_config.rs  codegen.rs  embedded_std.rs  lexer.rs  lib.rs  main.rs  module_resolver.rs  monomorphize.rs  parser.rs  semantics.rs  source.rs
mux-compiler/src/ast/: error.rs  literals.rs  mod.rs  nodes.rs  operators.rs  patterns.rs  types.rs
mux-compiler/src/codegen/: classes.rs  constructors.rs  expressions.rs  functions.rs  generics.rs  memory.rs  methods.rs  mod.rs  operators.rs  runtime.rs  statements.rs  types.rs
mux-compiler/src/diagnostic/: emitter.rs  files.rs  mod.rs  styles.rs
mux-compiler/src/lexer/: error.rs  mod.rs  span.rs  token.rs
mux-compiler/src/parser/: error.rs  mod.rs
mux-compiler/src/semantics/: declarations.rs  error.rs  expressions.rs  format.rs  free_vars.rs  imports.rs  mod.rs  patterns.rs  statements.rs  std_registry.rs  stdlib.rs  symbol_table.rs  types.rs  unifier.rs
mux-compiler/src/snapshots/: tests__codegen_error_formats.snap  tests__complex_types_to_llvm.snap  tests__empty_program_generation.snap  tests__higher_kinded_types.snap  tests__hkt_bounds.snap  tests__module_state.snap  tests__primitive_types_to_llvm.snap  tests__runtime_functions.snap  tests__type_node_resolution.snap
mux-compiler/std/: test.mux
mux-compiler/std/dsa/: algorithm.mux  bintree  bintree.mux  collection.mux  graph.mux  heap.mux  queue.mux  stack  stack.mux
mux-compiler/tests/: ast_unit.rs  cli_integration.rs  codegen_integration.rs  executable_integration.rs  format_unit.rs  free_vars_unit.rs  lexer_integration.rs  parser_integration.rs  semantic_mutex_imported_class.rs  semantics_integration.rs  service_integration.rs  source_integration.rs
mux-compiler/tests/snapshots/: codegen_integration__codegen_integration__collections.snap  codegen_integration__codegen_integration__collections.snap.new  codegen_integration__codegen_integration__control_flow.snap  codegen_integration__codegen_integration__enums_classes.snap  codegen_integration__codegen_integration__enums_classes.snap.new  codegen_integration__codegen_integration__forward_ref.snap  codegen_integration__codegen_integration__full_test.snap  codegen_integration__codegen_integration__full_test.snap.new  codegen_integration__codegen_integration__functions.snap  codegen_integration__codegen_integration__generic_classes.snap  codegen_integration__codegen_integration__generics.snap  codegen_integration__codegen_integration__generics.snap.new  codegen_integration__codegen_integration__imports.snap  codegen_integration__codegen_integration__list_test.snap  codegen_integration__codegen_integration__list_test.snap.new  codegen_integration__codegen_integration__map_test.snap  codegen_integration__codegen_integration__map_test.snap.new  codegen_integration__codegen_integration__optionals_results.snap  codegen_integration__codegen_integration__optionals_results.snap.new  codegen_integration__codegen_integration__references.snap  codegen_integration__codegen_integration__test.snap  (+352 more)
mux-profiling/: Cargo.toml
mux-profiling/src/: lib.rs
(+861 files in other folders)
