[package]
name = "mux_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ordered-float = "4.2"
unicode-width = "0.1.11"
lazy_static = "1.4"
inkwell = { version = "0.6.0", features = ["llvm17-0"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
