[package]
name = "mux-lang"
version = "0.1.2"
edition = "2024"
description = "The Mux Programming Language Compiler"
authors = ["Derek Corniello"]
repository = "https://github.com/DerekCorniello/mux-lang"
license = "MIT"
keywords = ["mux", "compiler", "language"]
categories = ["development-tools", "compilers"]
exclude = [
    "../test_scripts/",
    "tests/",
    "../run_all_test_scripts.sh",
    "../run_all_error_cases.sh",
    "../mux-website/",
    "../AGENTS.md",
    "../CONTRIBUTING.md"
]

[[bin]]
name = "mux"
path = "src/main.rs"

[dependencies]
ordered-float = "4.2"
unicode-width = "0.1.11"
lazy_static = "1.4"
inkwell = { version = "0.6.0", features = ["llvm17-0"] }
clap = { version = "4", features = ["derive"] }
mux-runtime = "0.1.2"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }

[build-dependencies]
set-git-hooks-dir = "1.0"
