[package]
name = "mux-lang"
version = "0.4.1"
edition = "2024"
default-run = "mux"
description = "The Mux Programming Language Compiler"
authors = ["Derek Corniello"]
repository = "https://github.com/muxlang/mux-compiler"
license = "MIT"
keywords = ["mux", "compiler", "language"]
categories = ["development-tools", "compilers"]
exclude = [
    "../VERSION",
    "../test_scripts/",
    "tests/",
    "../run_all_test_scripts.sh",
    "../run_all_error_cases.sh",
    "../mux-website/",
    "../AGENTS.md",
    "../CONTRIBUTING.md"
]

[[bin]]
name = "mux"
path = "src/main.rs"

[dependencies]
ordered-float = "4.2"
unicode-width = "0.1.11"
lazy_static = "1.4"
inkwell = { version = "0.9.0", features = ["llvm22-1"] }
clap = { version = "4", features = ["derive"] }
mux-runtime = "0.4.1"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
ordered-float = "4.2"
regex = "1"
toml = "0.8"

[build-dependencies]
set-git-hooks-dir = "1.0"
