[package]
name = "mux-profiling"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.eframe]
version = "0.33"
optional = true

[dependencies.egui]
version = "0.33"
optional = true

[features]
viewer = ["dep:eframe", "dep:egui"]

[[bin]]
name = "mux-profile-viewer"
path = "src/bin/mux-profile-viewer.rs"
required-features = ["viewer"]
