[package]
name = "mux-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mux-lang = { path = ".." }
mux-runtime = { path = "../../mux-runtime" }

[[bin]]
name = "lexer"
path = "fuzz_targets/lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json"
path = "fuzz_targets/json.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
